--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>Popo2</title>
+    <title>Pos Demo</title>
     <!-- <link rel="icon" href="" type="image/x-icon" /> -->
 </head>
 
